<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Damdi\'s HIIT</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="total_rounds">Total Rounds</string>
    <string name="current_round">Current Round</string>
    <string name="rest_time">Rest Time</string>
    <string name="work_time">Work Time</string>
    <string name="delay_time">Delay Time</string>
    <string name="bell">Bell</string>
    <string name="timer">Timer</string>
    <string name="reset">Reset</string>
    <string name="initial_time">00:00</string>
    <!--    <string name="cur_round_start_del">/</string> -->
    <string name="cur_round_start_txt">Round: </string>
    <string name="keepscreen">Keep Screen On</string>
    <string name="alt_time_picker_separator">:</string>
    <string name="timely">Timely</string>

</resources>
